# trade-screenshots

./: .gitignore  LICENSE  README.md  plots.py  pyproject.toml  setup.py  stocks-in-play.py  trade-screenshots.py  utils.py  utils_ta.py
trade_screenshots/: common.py  plots.py  plotter.py  sip_handler.py  symbols_handler.py  trades_handler.py  utils.py  utils_ta.py
