[tool.poetry]
name = "trade-screenshots"
version = "0.1.0"
description = ""
authors = ["fbjarkes <fbjarkes-github.q5706@aleeas.com>"]
readme = "README.md"
packages = [{include = "trade_screenshots"}]

[tool.poetry.dependencies]
python = "^3.7"
pandas = "^2.1.1"
finta = "^1.3"
fire = "^0.5.0"
plotly = "^5.17.0"
black = "^23.9.1"
ruff = "^0.0.292"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 180
skip-string-normalization = true


[tool.ruff]
line-length = 180
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  #"UP",  # pyupgrade
]
exclude = [
  "tests",
]