[tool.poetry]
name = "trade-screenshots"
version = "0.1.0"
description = ""
authors = ["fbjarkes <fbjarkes-github.q5706@aleeas.com>"]
readme = "README.md"
packages = [{include = "trade_screenshots"}]

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^2.1.1"
finta = "^1.3"
fire = "*"
plotly = "^5.17.0"
black = "*"
ruff = "*"
python-dotenv = "^1.0.0"
aider = "^0.2.6"



[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.black]
line-length = 180
skip-string-normalization = true


[tool.ruff]
line-length = 180
select = [
  "E",   # pycodestyle
  "F",   # pyflakes
  #"UP",  # pyupgrade
]
exclude = [
  "tests",
]
